UPDATE: login controller

--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ DB_POOL_MAX=10
 DB_POOL_MIN=2
 DB_POOL_ACQUIRE=60000
 DB_POOL_IDLE=10000
+
+# SECRET KEY
+SECRET_KEY=HX.Oic-a!WC/p6eOD`/7UcEt6?3UQr+DMML3,>T8nCZoylf1&:r/h_p<h%
