--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "dev": "nodemon server"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6",
     "sequelize": "^6.37.7"
